group 'KafkaTutorial'
version '1.0-SNAPSHOT'

apply plugin: 'application'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url "http://packages.confluent.io/maven/"
    }
}

dependencies {
    compile 'org.apache.kafka:kafka-clients:1.0.0'
    compile 'org.apache.kafka:kafka_2.11:1.0.0'
    compile 'org.apache.avro:avro:1.8.2'
    compile 'io.confluent:kafka-avro-serializer:3.3.1'
    compile 'com.fasterxml.jackson.core:jackson-databind'

    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.1")
    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.1")
}

mainClassName = "io.github.msayag.kafka.Main"

run {
    if (project.hasProperty("mode")) {
        args mode
    }
}